--- a/templates/m_main.html
+++ b/templates/m_main.html
@@ -36,7 +36,7 @@
         </div>
         <div class='m_settings_theme' onclick="switch_theme()">
           <img class="icon" src="static/img/switch_theme.svg" style="position: absolute; top: 10px; left: 5px;" width="40" height="40">
-          <h2 style="position: absolute; top: 5px; left: 60px;">Switch thame</h2>
+          <h2 style="position: absolute; top: 5px; left: 60px;">Switch theme</h2>
         </div>
         <div class='m_logout_button_container' onclick="logout()">
           <img class="icon" src="static/img/logout.svg" style="position: absolute; top: 10px; left: 20px;" width="40" height="40">
