--- a/templates/main.html
+++ b/templates/main.html
@@ -91,7 +91,7 @@
         </div>
         <div class='settings_theme' onclick="switch_theme()">
           <img class="icon" src="static/img/switch_theme.svg" style="position: absolute; top: 10px; left: 5px;" width="40" height="40">
-          <h2 style="position: absolute; top: 5px; left: 60px;">Switch thame</h2>
+          <h2 style="position: absolute; top: 5px; left: 60px;">Switch theme</h2>
         </div>
         <!--<div class='settings_create_file'>
           <img class="icon" src="static/img/add.svg" style="position: absolute; top: 10px; left: 5px;" width="40" height="40">
@@ -144,6 +144,7 @@
         <h2 id="name_file" style="position: absolute; top: 8px; left: 80px; display: inline-block;">test2.txt</h2>
         <h2 id="desctyption_file" style="position: absolute; left: 10px; top: 50px; display: inline-block;">FILE</h2>
         <h2 id="size_file" style="position: absolute; left: 10px; top: 75px; display: inline-block;">8 KB</h2>
+        <!--<input class="checkbox" style="left: 100px" type='checkbox' onclick='handleClick(this);'>-->
         <a id="download_file" href="" download><img class="icon" src="static/img/download.svg" style="position: absolute; top: 50px; left: 400px;" width="30" height="30"></a>
         <img onclick="close_bottom_bar()" class="icon" src="static/img/cross.svg" style="position: absolute; top: 8px; right: 8px;" width="30" height="30">
         <a id="delete_file" href=""><img class="icon" src="static/img/trash.svg" style="position: absolute; top: 50px; right: 60px;" width="30" height="30"></a>
