--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "static/css/main.1.css"/>
 
+    <link rel="stylesheet" href = "static/css/topBar.1.css"/>
+    <link rel="stylesheet" href = "static/css/leftBar.1.css"/>
+    <link rel="stylesheet" href = "static/css/rightBar.1.css"/>
+
+    <link rel="stylesheet" href = "static/css/file.1.css"/>
+
   </head>
 
   <body bgcolor = "#24292E">
@@ -15,7 +21,9 @@
     </div>
     
     <div class="leftBar">
-
+      <div class="path_map_div" style="display: none">
+        <ul id="path_map_list"></ul>
+      </div>
       <div class="disk_info">
         <img class="icon" style="margin: 5px 5px" width="18" height="18" src="static/img/dvd-disk.svg">
         <p style="margin: -23px 30px">25.2GB / 100GB</p>
@@ -29,6 +37,11 @@
 
     <!--Информация о файле-->
     <div id="rightBar" class="rightBar" style="display: none">
+      <div class="file_close_button block_select" onclick="close_fileInfo()">
+        <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/cross.svg">
+        <p style="margin: -25px 40px;">close</p>
+      </div>
+
       <div class="file_ico_name_div">
         <img class="icon" style="margin: 10px 10px" width="40" height="40" src="static/img/file.svg">
         <input id="fileName_input" class="input_style fileName_input" style="" type=text placeholder="file name">
@@ -42,30 +55,51 @@
         <textarea class="input_style fileDescription" style="display: none"></textarea>
       </div>
 
-      <div class="file_download_button">
+      <div class="file_download_button block_select">
         <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/download.svg">
         <p style="margin: -25px 40px;">download</p>
+      </div>
+
+      <div class="file_delete_button block_select">
+        <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/trash.svg">
+        <p style="margin: -25px 40px;">delete</p>
       </div>
       
 
     </div>
     
     <div class="topBar">
-      <div class="user_button">
-        <img class="icon" style="margin: 0px 5px" width="25" height="25" src="static/img/user.svg">
-        <p style="margin: -22px 40px; color: #91918D">user</p>
-        <p style="margin: 15px 40px">100LAR</p>
-        <img class="icon" style="position:absolute; right: 10px" width="10" height="10" src="static/img/triangle.svg">
-      </div>
-      <img class="icon path_buttons" style="left: 210px" width="30" height="30" src="static/img/back.svg">
-      <img class="icon path_buttons" style="left: 210px" width="30" height="30" src="static/img/forward.svg">
-      <img class="icon path_buttons" style="left: 210px" width="30" height="30" src="static/img/reload.svg">
-      <img class="icon path_buttons" style="left: 210px" width="30" height="30" src="static/img/home.svg">
-      <input id="path" class="input_style" style="left: 220px; width: 680px; top: -2px;" type=text placeholder="Path">
+      
+      <img class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/back.svg">
+      <img class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/forward.svg">
+      <img class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/reload.svg">
+      <img class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/home.svg">
+      <input id="path" class="input_style path_input" type=text placeholder="Path">
       
       <div class="search_div" style="display: none">
         <input id="searh_input" class="input_style" style="left: 240px; width: 200px; top: -2px;" type=text placeholder="Path">
       </div>
+    </div>
+
+    <div id="background_black" class="background_black" style="display: none">
+      
+    </div>
+    <div id="leftBar_user" class="leftBar_user" style="display: none">
+      <div class="small_button_style block_select" style="left: 0px; top: 45px; width: 200px">
+        <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/settings.svg">
+        <p style="margin: -25px 40px;">settings</p>
+      </div>
+      <div class="button_exit_style block_select">
+        <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/logout.svg">
+        <p style="margin: -25px 40px;">logout</p>
+      </div>
+    </div>
+
+    <div id="user_button" class="user_button block_select" onclick="open_close_user_button()">
+      <img class="icon" style="margin: 0px 5px" width="25" height="25" src="static/img/user.svg">
+      <p style="margin: -22px 40px; color: #91918D">user</p>
+      <p style="margin: 15px 40px">100LAR</p>
+      <img id="user_button_triangle" class="icon" style="position:absolute; right: 10px" width="10" height="10" src="static/img/triangle.svg">
     </div>
 
   </body>
