--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>[ TEST ]</title>
+    <title>[ DISK ]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "static/css/main.1.css"/>
 
