--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -26,7 +26,7 @@
       </div>
       <div class="disk_info">
         <img class="icon" style="margin: 5px 5px" width="18" height="18" src="static/img/dvd-disk.svg">
-        <p style="margin: -23px 30px">25.2GB / 100GB</p>
+        <p id="disk_converted"style="margin: -23px 30px">25.2GB / 100GB</p>
       </div>
       <div class="disk_space">
         <div id="disk_space_progress" class="disk_space_progress">
@@ -97,8 +97,8 @@
 
     <div id="user_button" class="user_button block_select" onclick="open_close_user_button()">
       <img class="icon" style="margin: 0px 5px" width="25" height="25" src="static/img/user.svg">
-      <p style="margin: -22px 40px; color: #91918D">user</p>
-      <p style="margin: 15px 40px">100LAR</p>
+      <p id="user_status" style="margin: -22px 40px; color: #91918D">user</p>
+      <p id="user_name" style="margin: 15px 40px">100LAR</p>
       <img id="user_button_triangle" class="icon" style="position:absolute; right: 10px" width="10" height="10" src="static/img/triangle.svg">
     </div>
 
@@ -106,6 +106,9 @@
 
   <script type="text/javascript" src="static/js/main.1.js"></script>
 
+  <script type="text/javascript" src="static/js/info.1.js"></script>
+  <script type="text/javascript" src="static/js/user.1.js"></script>
+  <script type="text/javascript" src="static/js/path_map.1.js"></script>
   <script type="text/javascript" src="static/js/file.1.js"></script>
 
 </html>
