--- a/app/static/css/rightBar.1.css
+++ b/app/static/css/rightBar.1.css
@@ -7,9 +7,9 @@
   height: 100%;
   width: 300px;
 
-  background-color: var(--top-color)/*#24292E*/;
+  background-color: var(--top-color)/*var(--bg-color)*/;
 
-  border-left: 1px solid #141414;
+  border-left: 1px solid var(--border-color);
 }
 
 .fileName_input {
@@ -19,7 +19,7 @@
   top: 10px;
   width: 230px;
 
-  background-color: #1D2125;
+  background-color: var(--top-color);
 }
 
 .fileDescription {
@@ -32,7 +32,7 @@
 
   resize: none;
 
-  background-color: #1D2125;
+  background-color: var(--top-color);
 
 }
 
@@ -42,8 +42,8 @@
   top: 81px;
   width: 300px;
   height: 60px;
-  border-bottom: 1px solid #141414;
-  background-color: #24292E;
+  border-bottom: 1px solid var(--border-color);
+  background-color: var(--bg-color);
 }
 
 .file_close_button {
@@ -52,15 +52,15 @@
   top: 45px;
   width: 100px;
   height: 35px;
-  border-bottom: 1px solid #141414;
-  border-right: 1px solid #141414;
-  background-color: #24292E;
+  border-bottom: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  background-color: var(--bg-color);
 
   cursor: pointer;
 }
 
 .file_close_button:hover {
-  background-color: #2F363D;
+  background-color: var(--hover-color);
 }
 
 .file_download_button {
@@ -69,15 +69,15 @@
   top: 243px;
   width: 150px;
   height: 35px;
-  border-bottom: 1px solid #141414;
-  border-right: 1px solid #141414;
-  background-color: #24292E;
+  border-bottom: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  background-color: var(--bg-color);
 
   cursor: pointer;
 }
 
 .file_download_button:hover {
-  background-color: #2F363D;
+  background-color: var(--hover-color);
 }
 
 .file_delete_button {
@@ -86,8 +86,8 @@
   top: 243px;
   width: 149px;
   height: 35px;
-  border-bottom: 1px solid #141414;
-  background-color: #24292E;
+  border-bottom: 1px solid var(--border-color);
+  background-color: var(--bg-color);
 
   cursor: pointer;
 }
@@ -102,11 +102,10 @@
   top: 142px;
   width: 300px;
   height: 100px;
-  border-bottom: 1px solid #141414;
-  background-color: #24292E;
+  border-bottom: 1px solid var(--border-color);
+  background-color: var(--bg-color);
 }
 
 .file_info_div p {
   margin: 0px 10px;
 }
-
