--- a/app/static/css/login.1.css
+++ b/app/static/css/login.1.css
@@ -4,7 +4,7 @@
   position:absolute;
 
   background-color: var(--top-color);
-  border: 1px solid #141414;
+  border: 1px solid var(--border-color);
 
   right: 0px;
   top: 0px;
@@ -50,7 +50,7 @@
 
   width: 380px;
 
-  background-color: #1D2125;
+  background-color: var(--top-color);
 }
 
 .login_button {
@@ -59,13 +59,13 @@
   bottom: 0px;
   width: 150px;
   height: 35px;
-  border-top: 1px solid #141414;
-  border-right: 1px solid #141414;
-  background-color: #24292E;
+  border-top: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  background-color: var(--bg-color);
 
   cursor: pointer;
 }
 
 .login_button:hover {
-  background-color: #2F363D;
+  background-color: var(--hover-color);
 }
