--- a/app/static/css/main.1.css
+++ b/app/static/css/main.1.css
@@ -15,16 +15,16 @@
 }
 
 p {
-  color: #D1D5C3; /* Цвет текста */
+  color: var(--main-font-color); /* Цвет текста */
 }
 
 h1, h2, h3, h4, h5, h6 {
   /*color: #C1C2BF; /* Цвет текста */
-  color: #D1D5C3;
+  color: var(--main-font-color);
 }
 
 a {
-  color: #D1D5C3; /* Цвет ссылок */
+  color: var(--main-font-color); /* Цвет ссылок */
 }
 
 li {
@@ -42,6 +42,7 @@ body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
   font-size: 14px;
   line-height: 1.5;
+  background-color: var(--bg-color);
 }
 
 .icon {
@@ -71,17 +72,17 @@ body::-webkit-scrollbar-thumb {
 
 .hr_style{
   border: none;
-  background-color:  #141414;
-  color: #141414;
+  background-color:  var(--border-color);
+  color: var(--border-color);
   height: 1px;
 }
 
 .input_style {
   position: relative;
-  color: #D1D5C3;
-  border: 1px solid #141414;
+  color: var(--main-font-color);
+  border: 1px solid var(--border-color);
   /*background-color: #0D1117;*/
-  background-color: #24292E;
+  background-color: var(--bg-color);
 
   font-size: 14px;
 
