--- a/app/static/css/topBar.1.css
+++ b/app/static/css/topBar.1.css
@@ -1,14 +1,14 @@
- 
+
 .topBar {
   position: fixed;
-  background-color: #1D2125;
+  background-color: var(--top-color);
 
   top: 0px;
   left: 0px;
   width: 100%;
   height: 45px;
 
-  border-bottom: 1px solid #141414;
+  border-bottom: 1px solid var(--border-color);
 
 }
 
@@ -25,32 +25,32 @@
 }
 
 .path_input {
-  left: 220px; 
+  left: 220px;
   /*680px*/
-  width: calc(900px + var(--scalex)); 
+  width: calc(900px + var(--scalex));
   top: -2px;
 }
 
 .user_button {
   position: fixed;
-  background-color: #1D2125;
+  background-color: var(--top-color);
 
   top: 0px;
   left: 0px;
   width: var(--width-left-bar);
   height: 45px;
 
-  border-right: 1px solid #141414;
-  border-bottom: 1px solid #141414;
+  border-right: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
 
   /*transition:0.1s all;*/
 
   cursor: pointer;
-  
+
 }
 
 .user_button:hover {
-  background-color: #2F363D;
+  background-color: var(--hover-color);
 }
 
 .user_button img {
