--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -14,7 +14,7 @@
 
   </head>
 
-  <body bgcolor = "#24292E">
+  <body>
 
     <div class="file_list">
       <ul id="file_list"></ul>
@@ -70,8 +70,8 @@
 
     <div class="topBar">
 
-      <img class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/back.svg" onclick="back_dir()">
-      <img class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/forward.svg">
+      <img class="icon path_buttons block_select" style="left: 210px; transform: rotate(-90deg)" width="30" height="30" src="static/img/arrow up.svg" onclick="back_dir()">
+      <img class="icon path_buttons block_select" style="left: 210px; transform: rotate(90deg)" width="30" height="30" src="static/img/arrow up.svg">
       <img class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/reload.svg" onclick="get_files()">
       <img class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/home.svg">
       <input id="path" class="input_style path_input" type=text placeholder="Path">
