--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -55,10 +55,12 @@
         <textarea class="input_style fileDescription" style="display: none"></textarea>
       </div>
 
-      <div class="file_download_button block_select">
-        <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/download.svg">
-        <p style="margin: -25px 40px;">download</p>
-      </div>
+      <a id="file_download_button" href="" download="test">
+        <div class="file_download_button block_select">
+          <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/download.svg">
+          <p style="margin: -25px 40px;">download</p>
+        </div>
+      </a>
 
       <div class="file_delete_button block_select">
         <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/trash.svg">
@@ -72,7 +74,7 @@
 
       <img class="icon path_buttons block_select" style="left: 210px; transform: rotate(-90deg)" width="30" height="30" src="static/img/arrow up.svg" onclick="back_dir()">
       <img class="icon path_buttons block_select" style="left: 210px; transform: rotate(90deg)" width="30" height="30" src="static/img/arrow up.svg">
-      <img class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/reload.svg" onclick="get_files()">
+      <img class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/refresh.svg" onclick="get_files()">
       <img class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/home.svg">
       <input id="path" class="input_style path_input" type=text placeholder="Path">
 
@@ -96,10 +98,10 @@
     </div>
 
     <div id="user_button" class="user_button block_select" onclick="open_close_user_button()">
-      <img class="icon" style="margin: 0px 5px" width="25" height="25" src="static/img/user.svg">
-      <p id="user_status" style="margin: -22px 40px; color: #91918D">user</p>
-      <p id="user_name" style="margin: 15px 40px">100LAR</p>
-      <img id="user_button_triangle" class="icon" style="position:absolute; right: 10px" width="10" height="10" src="static/img/triangle.svg">
+      <img class="icon" style="margin: 0px 15px" width="25" height="25" src="static/img/user.svg">
+      <p id="user_status" style="margin: -22px 45px; color: #91918D">user</p>
+      <p id="user_name" style="margin: 15px 45px">100LAR</p>
+      <img id="user_button_triangle" class="icon" style="position:absolute; right: 10px; top: 18px" width="10" height="10" src="static/img/triangle.svg">
     </div>
 
   </body>
