--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" href = "static/css/file.1.css"/>
 
+    <link rel="stylesheet" href = "static/css/checkBox.1.css"/>
+
   </head>
 
   <body>
