Исправил баг при переходе в другую директорию

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -31,9 +31,7 @@
         <p id="disk_converted"style="margin: -23px 30px">25.2GB / 100GB</p>
       </div>
       <div class="disk_space">
-        <div id="disk_space_progress" class="disk_space_progress">
-
-        </div>
+        <div id="disk_space_progress" class="disk_space_progress"></div>
       </div>
     </div>
 
