--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -62,7 +62,7 @@
         </div>
       </a>
 
-      <div class="file_delete_button block_select">
+      <div id="file_delete_button" class="file_delete_button block_select">
         <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/trash.svg">
         <p style="margin: -25px 40px;">delete</p>
       </div>
