Изменил цвет текста

--- a/app/static/css/main.1.css
+++ b/app/static/css/main.1.css
@@ -3,8 +3,8 @@
 
   --width-left-bar: 200px;
 
-  --top-font-color: #D1D5C3;
-  --main-font-color: #D1D5C3;
+  --top-font-color: #D1D5DA;
+  --main-font-color: #D1D5DA;
 
   --bg-color: #24292E;
   --top-color: #1D2125;
