--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -99,7 +99,7 @@
 
     <div id="user_button" class="user_button block_select" onclick="open_close_user_button()">
       <img class="icon" style="margin: 0px 15px" width="25" height="25" src="static/img/user.svg">
-      <p id="user_status" style="margin: -22px 45px; color: #91918D">user</p>
+      <p id="user_status" style="margin: -22px 45px; color: #959DA5">user</p>
       <p id="user_name" style="margin: 15px 45px">100LAR</p>
       <img id="user_button_triangle" class="icon" style="position:absolute; right: 10px; top: 18px" width="10" height="10" src="static/img/triangle.svg">
     </div>
