начал делать светлую тему

--- a/app/static/css/file.1.css
+++ b/app/static/css/file.1.css
@@ -8,7 +8,7 @@
 }
 
 .file {
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--main-border-color);
 
   height: 40px;
   /*width: 1150px;*/
