--- a/app/static/css/login.1.css
+++ b/app/static/css/login.1.css
@@ -4,7 +4,7 @@
   position:absolute;
 
   background-color: var(--top-color);
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--main-border-color);
 
   right: 0px;
   top: 0px;
@@ -25,8 +25,8 @@
   width: 400px;
 
   background-color: var(--bg-color);
-  border-top: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
+  border-top: 1px solid var(--main-border-color);
+  border-bottom: 1px solid var(--main-border-color);
 }
 
 .login_name_container {
@@ -39,7 +39,7 @@
   width: 400px;
 
   background-color: var(--bg-color);
-  border-top: 1px solid var(--border-color);
+  border-top: 1px solid var(--main-border-color);
 
 }
 
@@ -59,8 +59,8 @@
   bottom: 0px;
   width: 150px;
   height: 35px;
-  border-top: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
+  border-top: 1px solid var(--main-border-color);
+  border-right: 1px solid var(--main-border-color);
   background-color: var(--bg-color);
 
   cursor: pointer;
