--- a/app/static/css/rightBar.1.css
+++ b/app/static/css/rightBar.1.css
@@ -9,7 +9,7 @@
 
   background-color: var(--top-color)/*var(--bg-color)*/;
 
-  border-left: 1px solid var(--border-color);
+  border-left: 1px solid var(--main-border-color);
 }
 
 .fileName_input {
@@ -42,7 +42,7 @@
   top: 81px;
   width: 300px;
   height: 60px;
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--main-border-color);
   background-color: var(--bg-color);
 }
 
@@ -52,8 +52,8 @@
   top: 45px;
   width: 100px;
   height: 35px;
-  border-bottom: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--main-border-color);
+  border-right: 1px solid var(--main-border-color);
   background-color: var(--bg-color);
 
   cursor: pointer;
@@ -69,8 +69,8 @@
   top: 243px;
   width: 150px;
   height: 35px;
-  border-bottom: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--main-border-color);
+  border-right: 1px solid var(--main-border-color);
   background-color: var(--bg-color);
 
   cursor: pointer;
@@ -86,7 +86,7 @@
   top: 243px;
   width: 149px;
   height: 35px;
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--main-border-color);
   background-color: var(--bg-color);
 
   cursor: pointer;
@@ -102,7 +102,7 @@
   top: 142px;
   width: 300px;
   height: 100px;
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--main-border-color);
   background-color: var(--bg-color);
 }
 
