--- a/app/static/css/topBar.1.css
+++ b/app/static/css/topBar.1.css
@@ -8,7 +8,7 @@
   width: 100%;
   height: 45px;
 
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--top-border-color);
 
 }
 
@@ -29,6 +29,7 @@
   /*680px*/
   width: calc(900px + var(--scalex));
   top: -2px;
+  
 }
 
 .user_button {
@@ -40,14 +41,14 @@
   width: var(--width-left-bar);
   height: 45px;
 
-  border-right: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
+  border-right: 1px solid var(--top-border-color);
+  border-bottom: 1px solid var(--top-border-color);
 
   cursor: pointer;
 }
 
 .user_button:hover {
-  background-color: var(--hover-color);
+  background-color: var(--top-hover-color);
 }
 
 .user_button img {
