--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -72,10 +72,10 @@
 
     <div class="topBar">
 
-      <img id="go_back" class="icon path_buttons block_select" style="left: 210px; transform: rotate(-90deg)" width="30" height="30" src="static/img/arrow up.svg" onclick="go_back_dir_history()">
-      <img id="go_forward" class="icon path_buttons block_select" style="left: 210px; transform: rotate(90deg)" width="30" height="30" src="static/img/arrow up.svg" onclick="go_forward_dir_history()">
-      <img id="refresh" class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/refresh.svg" onclick="get_files()">
-      <img id="go_home" class="icon path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/home.svg" onclick="go_home()">
+      <img id="go_back" class="icon_topBar path_buttons block_select" style="left: 210px; transform: rotate(-90deg)" width="30" height="30" src="static/img/arrow up.svg" onclick="go_back_dir_history()">
+      <img id="go_forward" class="icon_topBar path_buttons block_select" style="left: 210px; transform: rotate(90deg)" width="30" height="30" src="static/img/arrow up.svg" onclick="go_forward_dir_history()">
+      <img id="refresh" class="icon_topBar path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/refresh.svg" onclick="get_files()">
+      <img id="go_home" class="icon_topBar path_buttons block_select" style="left: 210px" width="30" height="30" src="static/img/home.svg" onclick="go_home()">
       <input id="path" class="input_style path_input" type=text placeholder="Path">
 
       <div class="search_div" style="display: none">
@@ -88,20 +88,20 @@
     </div>
     <div id="leftBar_user" class="leftBar_user" style="display: none">
       <div class="small_button_style block_select" style="left: 0px; top: 45px; width: 200px">
-        <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/settings.svg">
-        <p style="margin: -25px 40px;">settings</p>
+        <img class="icon_topBar" style="margin: 7px 10px;" width="20" height="20" src="static/img/settings.svg">
+        <p class="top_bar_font_color" style="margin: -25px 40px;">settings</p>
       </div>
       <div class="button_exit_style block_select" onclick="logout()">
-        <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/logout.svg">
-        <p style="margin: -25px 40px;">logout</p>
+        <img class="icon_topBar" style="margin: 7px 10px;" width="20" height="20" src="static/img/logout.svg">
+        <p class="top_bar_font_color" style="margin: -25px 40px;">logout</p>
       </div>
     </div>
 
     <div id="user_button" class="user_button block_select" onclick="open_close_user_button()">
-      <img class="icon" style="margin: 0px 15px" width="25" height="25" src="static/img/user.svg">
-      <p id="user_status" style="margin: -22px 45px; color: #959DA5">user</p>
-      <p id="user_name" style="margin: 15px 45px">100LAR</p>
-      <img id="user_button_triangle" class="icon" style="position:absolute; right: 10px; top: 18px" width="10" height="10" src="static/img/triangle.svg">
+      <img class="icon_topBar" style="margin: 0px 15px" width="25" height="25" src="static/img/user.svg">
+      <p class="top_bar_font_color" id="user_status" style="margin: -22px 45px; color: #959DA5">user</p>
+      <p class="top_bar_font_color" id="user_name" style="margin: 15px 45px">100LAR</p>
+      <img id="user_button_triangle" class="icon_topBar" style="position:absolute; right: 10px; top: 18px" width="10" height="10" src="static/img/triangle.svg">
     </div>
 
   </body>
