--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -44,7 +44,7 @@
 
       <div class="file_ico_name_div">
         <img class="icon" style="margin: 10px 10px" width="40" height="40" src="static/img/file.svg">
-        <input id="fileName_input" class="input_style fileName_input" style="" type=text placeholder="file name">
+        <input id="fileName_input" class="input_style fileName_input" style="" type=text placeholder="file name" onkeypress="return rename_file_enter(event)">
       </div>
 
       <div class="file_info_div">
