--- a/app/static/css/checkBox.1.css
+++ b/app/static/css/checkBox.1.css
@@ -31,6 +31,6 @@
 .custom-checkbox:checked+label::before {
   border-color: #999999;
 
-  --background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='6 6 12 12'%3e%3cpath fill='%23999999' d='M7 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H7a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z'/%3e%3c/svg%3e");
+  /*background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='6 6 12 12'%3e%3cpath fill='%23999999' d='M7 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H7a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z'/%3e%3c/svg%3e");*/
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23999999' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e")
 }
