--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -35,4 +35,6 @@
 
   <script type="text/javascript" src="static/js/login.1.js"></script>
 
+  <script type="text/javascript" src="static/js/theme.1.js"></script>
+
 </head>
