--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -42,6 +42,9 @@
         <p style="margin: -25px 40px;">close</p>
       </div>
 
+      <div id="file_info_div">
+      </div>
+
       <div class="file_ico_name_div">
         <img class="icon" style="margin: 10px 10px" width="40" height="40" src="static/img/file.svg">
         <input id="fileName_input" class="input_style fileName_input" style="" type=text placeholder="file name" onkeypress="return rename_file_enter(event)">
@@ -107,6 +110,8 @@
   </body>
 
   <script type="text/javascript" src="static/js/main.1.js"></script>
+
+  <script type="text/javascript" src="static/js/theme.1.js"></script>
 
   <script type="text/javascript" src="static/js/info.1.js"></script>
   <script type="text/javascript" src="static/js/user.1.js"></script>
