--- a/app/static/css/checkBox.1.css
+++ b/app/static/css/checkBox.1.css
@@ -20,7 +20,7 @@
   height: 1.2em;
   flex-shrink: 0;
   flex-grow: 0;
-  border: 2px solid #999999;
+  border: 2px solid var(--main-checkBox-color);
   border-radius: 4px;
   margin-right: 0.5em;
   background-repeat: no-repeat;
@@ -29,7 +29,7 @@
 }
 
 .custom-checkbox:checked+label::before {
-  border-color: #999999;
+  border-color: var(--main-checkBox-color);
 
   /*background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='6 6 12 12'%3e%3cpath fill='%23999999' d='M7 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H7a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z'/%3e%3c/svg%3e");*/
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23999999' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e")
