--- a/app/static/css/main.1.css
+++ b/app/static/css/main.1.css
@@ -8,11 +8,15 @@
 
   --bg-color: #24292E;
   --top-color: #1D2125;
+  --right-color: #1D2125;
 
   --top-hover-color: #2F363D;
   --hover-color: #2F363D;
 
-  --top-input-color: #24292E;
+  --top-red_color: #450C0F;
+  --main-red-color:  #450C0F;
+
+  --top-input-color: #2F363D;
   --main-input-color: #2F363D;
 
   --top-icons-filter: invert(60%);
@@ -20,9 +24,13 @@
 
   --top-border-color: #141414;
   --main-border-color: #141414;
+
+  --top-checkBox-color: #999999;
+  --main-checkBox-color: #999999;
+
 }
 
-:light {
+[data-theme = "light"] {
   --scalex: calc(100% - 1280px);
 
   --width-left-bar: 200px;
@@ -32,18 +40,25 @@
 
   --bg-color: #FFFFFF;
   --top-color: #1D2125;
+  --right-color: #FFFFFF;
 
   --top-hover-color: #2F363D;
   --hover-color: #EBEEF1;
 
-  --top-input-color: #24292E;
-  --main-input-color: #2F363D;
+  --top-red_color: #450C0F;
+  --main-red-color:  #FDB8C0;
+
+  --top-input-color: #FFFFFF;
+  --main-input-color: #FFFFFF;
 
   --top-icons-filter: invert(70%);
   --main-icons-filter: invert(35%);
 
   --top-border-color: #141414;
   --main-border-color: #E1E4E8;
+
+  --top-checkBox-color: #595959;
+  --main-checkBox-color: #595959;
 }
 
 p {
